add: show password

--- a/jardiquest/view/login.html
+++ b/jardiquest/view/login.html
@@ -42,7 +42,14 @@
                         </td>
                     </tr>
                     <tr>
-                        <td><input class="input" type="password" name="password"></td>
+                        <td><input class="input" id="password" type="password" name="password"></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>
+                            <input type="checkbox" onclick="toggleDisplayPassword()">
+                            <b style="margin-left: 5px">Afficher</b>
+                        </td>
                     </tr>
                 </table>
 
@@ -65,5 +72,7 @@
     </div>
 
 </div>
+
+<script src="{{ url_for('static', filename='js/auth.js') }}"></script>
 
 {% endblock %}
