--- a/jardiquest/view/garden.html
+++ b/jardiquest/view/garden.html
@@ -25,97 +25,97 @@
     <div class="handler-display-data">
         <div class="top">
             <div class="attributs">
-                <div>
-                    {% set name=jardin.name %}
-
-                    {% if name is none %}
-                    {% set name='' %}
-                    {% endif %}
-                    {% if name|length == 0 %}
-                    <b class="brown-orange-style">Mon jardin :</b>
-                    <span>Pas de jardin</span>
-                </div>
-                {% else %}
+                {% set name=jardin.name %}
+                {% if name|length != 0 %}
                 <h1 class="garden-name">{{ jardin.name }}</h1>
             </div>
+
+            <p class="description-garden">{{jardin.description.replace('\n', '<br>') | safe}}</p>
+
             <div class="money_city">
                 <b class="brown-orange-style">Adresse :</b>
                 <span>{{jardin.adresse}} {{jardin.ville}}</span>
                 <br>
                 <b class="brown-orange-style">Role :</b>
                 <span>{{user.role}}</span>
-            </div>
-            <div>
+                <br>
                 <b class="brown-orange-style">Monnaie :</b>
                 <span>{{jardin.moneyName}}</span>
                 <br>
                 <b class="brown-orange-style">Participants :</b>
                 <span>{{jardin.nbParticipants}}</span>
             </div>
+            {% else %}
+            <p>Vous n'avez pas de jardin. <br> Voulez-vous en créer un ?</p>
             {% endif %}
-        </div>
-        <div class="right">
+
+             <div class="right">
 
             {% set idJardin=user.idJardin %}
 
             {% if idJardin is none %}
-            {% set idJardin='' %}
+                {% set idJardin='' %}
             {% endif %}
 
             <!-- To create a garden you musn't have garden -->
             {% if idJardin|length == 0 %}
-            <button class="button_edit"><a href="{{url_for('controller.new_garden')}}">Nouveau</a></button>
+                <button class="button_edit"><a href="{{url_for('controller.new_garden')}}">Nouveau</a></button>
             {% endif %}
 
             <!-- To modify it must be your own garden -->
             {% if user.role == 'Proprietaire' %}
-            {% if idJardin|length != 0 %}
-            <button class="button_edit"><a href="{{url_for('controller.modify_garden')}}">Modifier</a></button>
-            {% endif %}
+                {% if idJardin|length != 0 %}
+                    <button class="button_edit"><a href="{{url_for('controller.modify_garden')}}">Modifier</a></button>
+                {% endif %}
             {% endif %}
 
             <!-- To leave a garden we must be a participant that is in a garden -->
             {% if idJardin|length != 0 %}
-            {% if user.role == 'Participant' %}
-            <button class="button_edit"><a
-                    href="{{url_for('controller.leave',id=jardin.idJardin)}}">Quitter</a></button>
-            {% endif %}
+                {% if user.role == 'Participant' %}
+                    <button class="button_edit leave-garden"><a
+                        href="{{url_for('controller.leave',id=jardin.idJardin)}}">Quitter</a></button>
+                {% endif %}
             {% endif %}
         </div>
-    </div>
-    <div class="bottom">
-        <span>
-            <b class="brown-orange-style">Trouver un autre jardin :</b> <br>
-        </span>
-        <form method="POST" class="display_form">
-            <input class="input" type="text" name="filtreNom" placeholder="Nom"></input>
-            <input class="input" type="text" name="filtreDescription" placeholder="Description"></input>
-            <input class="input" type="text" name="filtreMonnaie" placeholder="Monnaie"></input>
-            <input class="input" type="text" name="filtreVille" placeholder="Ville"></input>
-            <input class="input" type="text" name="filtreAdresse" placeholder="Adresse"></input>
-            <button class="button" type="submit">Search</button>
-        </form>
-        <table id="table" class="table-all">
-            <thead>
-                <tr>
-                    <th>Nom du jardin</th>
-                    <th>Description</th>
-                    <th>Monnaie</th>
-                    <th>Ville</th>
-                    <th>Adresse</th>
-                    <th>Participants</th>
-                    {% if user.role == 'Participant' %}
-                    <th>Choisir</th>
-                    {% endif %}
-                </tr>
-            </thead>
-            <tbody id="body">
-            </tbody>
-        </table>
-        <div class="find"><button onclick="previousPage()">Précedent</button>
-            <p id="resultats"></p><button onclick="nextPage()">Suivant</button>
+
         </div>
+
     </div>
+    {% if idJardin|length == 0 %}
+        <div class="bottom">
+            <span>
+                <b class="brown-orange-style">Trouver un jardin :</b> <br>
+            </span>
+            <form method="POST" class="display_form">
+                <input class="input" type="text" name="filtreNom" placeholder="Nom"></input>
+                <input class="input" type="text" name="filtreDescription" placeholder="Description"></input>
+                <input class="input" type="text" name="filtreMonnaie" placeholder="Monnaie"></input>
+                <input class="input" type="text" name="filtreVille" placeholder="Ville"></input>
+                <input class="input" type="text" name="filtreAdresse" placeholder="Adresse"></input>
+                <button class="button" type="submit">Chercher</button>
+            </form>
+            <table id="table" class="table-all">
+                <thead>
+                    <tr>
+                        <th>Nom du jardin</th>
+                        <th>Description</th>
+                        <th>Monnaie</th>
+                        <th>Ville</th>
+                        <th>Adresse</th>
+                        <th>Participants</th>
+                        {% if user.role == 'Participant' %}
+                        <th>Choisir</th>
+                        {% endif %}
+                    </tr>
+                </thead>
+                <tbody id="body">
+                </tbody>
+            </table>
+            <div class="find"><button onclick="previousPage()">Précedent</button>
+                <p id="resultats"></p><button onclick="nextPage()">Suivant</button>
+            </div>
+        </div>
+    {% endif %}
 </div>
 </div>
 
