add: missing title

--- a/jardiquest/view/handle_garden.html
+++ b/jardiquest/view/handle_garden.html
@@ -3,7 +3,7 @@
 {% include "_navbar.html" %}
 {% block content %}
 
-<title>Profil</title>
+<title>Gérer jardin</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/view/handle_garden.css') }}">
 
 
