--- a/jardiquest/view/market.html
+++ b/jardiquest/view/market.html
@@ -3,7 +3,7 @@
 
 {% set active="market" %}
 {% include "_navbar.html" %}
-
+<title>Marché</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/view/market/market.css') }}">
 
 <div id="market">
