--- a/jardiquest/view/new_garden.html
+++ b/jardiquest/view/new_garden.html
@@ -2,6 +2,8 @@
 {% set active='garden' %}
 {% include "_navbar.html" %}
 {% block content %}
+
+<title>Créer Jardin</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/view/new_garden.css') }}">
 
 <title>Créer un jardin</title>
