--- a/jardiquest/view/orders.html
+++ b/jardiquest/view/orders.html
@@ -4,6 +4,7 @@
 {% include "_navbar.html" %}
 {% block content %}
 
+<title>Historique Achat</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/view/market/orders.css') }}">
 
 <div id="orders_container">
