--- a/jardiquest/view/quests_list_garden.html
+++ b/jardiquest/view/quests_list_garden.html
@@ -1,5 +1,7 @@
 {% extends "quests_list.html" %}
 {% block css %}
+
+<title>Liste Quêtes</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/view/quests/garden_quests_list.css') }}">
 {% endblock %}
 
