--- a/jardiquest/view/quests_list_user.html
+++ b/jardiquest/view/quests_list_user.html
@@ -1,5 +1,7 @@
 {% extends "quests_list.html" %}
 
+<title>Vos Quêtes</title>
+
 {% block css %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/view/quests/user_quests_list.css') }}">
 {% endblock %}
