--- a/jardiquest/view/sell_catalogue.html
+++ b/jardiquest/view/sell_catalogue.html
@@ -4,6 +4,7 @@
 {% set active="handlegarden" %}
 {% include "_navbar.html" %}
 
+<title>Catalogue</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/view/market/market.css') }}">
 
 <div id="market">
