--- a/jardiquest/view/sell_product.html
+++ b/jardiquest/view/sell_product.html
@@ -3,6 +3,8 @@
 
 {% set active="handlegarden" %}
 {% include "_navbar.html" %}
+
+<title>Vente Produit</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/view/market/product.css') }}">
 
 
