--- a/jardiquest/view/user_orders.html
+++ b/jardiquest/view/user_orders.html
@@ -4,6 +4,7 @@
 {% include "_navbar.html" %}
 
 
+<title>Historique</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/view/market/user_orders.css') }}">
 
 <div id="orders_container">
