--- a/jardiquest/view/garden.html
+++ b/jardiquest/view/garden.html
@@ -3,7 +3,7 @@
 {% include "_navbar.html" %}
 {% block content %}
 
-<title>Profil</title>
+<title>Jardin</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/view/garden.css') }}">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
