--- a/jardiquest/view/market_product.html
+++ b/jardiquest/view/market_product.html
@@ -3,6 +3,7 @@
 
 {% set active="market" %}
 {% include "_navbar.html" %}
+<title>Produit</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/view/market/product.css') }}">
 
 
