--- a/jardiquest/view/suggestion.html
+++ b/jardiquest/view/suggestion.html
@@ -4,6 +4,7 @@
 {% set active="market" %}
 {% include "_navbar.html" %}
 
+<title>Suggestion</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/view/suggestion.css') }}">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
