--- a/jardiquest/view/new_garden.html
+++ b/jardiquest/view/new_garden.html
@@ -18,12 +18,15 @@
     {% endwith %}
 <div class="portal-container">
     <div class="container">
-        <form method="POST">
+        <form method="POST" enctype="multipart/form-data">
             <input class="input" type="text" name="nom" placeholder="Nom du jardin" required oninvalid="this.setCustomValidity('Veuillez renseigner le nom du jardin')" onchange="this.setCustomValidity('')" type="text">
             <textarea class="area" placeholder="Description du jardin" type="textarea" name="description" id="description" rows="4" cols="50"></textarea>
             <input class="input" type="text" name="monnaie" placeholder="Nom de la monnaie" required oninvalid="this.setCustomValidity('Veuillez renseigner la monnaie')" onchange="this.setCustomValidity('')" type="text">
             <input class="input" type="text" name="adresse" placeholder="Adresse" required oninvalid="this.setCustomValidity('Veuillez renseigner l\'adresse')" onchange="this.setCustomValidity('')" type="text">
             <input class="input" type="text" name="ville" placeholder="Ville" required oninvalid="this.setCustomValidity('Veuillez renseigner la ville')" onchange="this.setCustomValidity('')" type="text">
+
+            <input class="input" type="file" name="file" />
+
             <div class="display_buttons_inline">
                 <input class="button" type="submit" value="Créer">
                 <button><a href="{{url_for('controller.garden')}}">Annuler</a></button>
