--- a/jardiquest/view/new_garden.html
+++ b/jardiquest/view/new_garden.html
@@ -29,7 +29,7 @@
 
             <div class="display_buttons_inline">
                 <input class="button" type="submit" value="Créer">
-                <button><a href="{{url_for('controller.garden')}}">Annuler</a></button>
+                <a href="{{url_for('controller.garden')}}"><button>Annuler</button></a>
             </div>
         </form>
     </div>
