--- a/jardiquest/view/suggestion.html
+++ b/jardiquest/view/suggestion.html
@@ -86,7 +86,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
-                <button type="button" class="btn btn-default"><a href="{{url_for('controller.buy',numbs=numbs,ids=ids)}}">Acheter</a></button>
+                <a href="{{url_for('controller.buy',numbs=numbs,ids=ids)}}"><button type="button" class="btn btn-default">Acheter</button></a>
             </div>
         </div>
     </div>
