--- a/jardiquest/view/garden.html
+++ b/jardiquest/view/garden.html
@@ -65,21 +65,20 @@
 
             <!-- To create a garden you musn't have garden -->
             {% if idJardin|length == 0 %}
-                <button class="button_edit"><a href="{{url_for('controller.new_garden')}}">Nouveau</a></button>
+                <a href="{{url_for('controller.new_garden')}}"><button class="button_edit">Nouveau</button></a>
             {% endif %}
 
             <!-- To modify it must be your own garden -->
             {% if user.role == 'Proprietaire' %}
                 {% if idJardin|length != 0 %}
-                    <button class="button_edit"><a href="{{url_for('controller.modify_garden')}}">Modifier</a></button>
+                <a href="{{url_for('controller.modify_garden')}}"><button class="button_edit">Modifier</button></a>
                 {% endif %}
             {% endif %}
 
             <!-- To leave a garden we must be a participant that is in a garden -->
             {% if idJardin|length != 0 %}
                 {% if user.role == 'Participant' %}
-                    <button class="button_edit leave-garden"><a
-                        href="{{url_for('controller.leave',id=jardin.idJardin)}}">Quitter</a></button>
+                <a href="{{url_for('controller.leave',id=jardin.idJardin)}}"><button class="button_edit leave-garden">Quitter</button></a>
                 {% endif %}
             {% endif %}
         </div>
@@ -93,11 +92,11 @@
                 <b class="brown-orange-style">Trouver un jardin :</b> <br>
             </span>
             <form method="POST" class="display_form">
-                <input class="input" type="text" name="filtreNom" placeholder="Nom"></input>
-                <input class="input" type="text" name="filtreDescription" placeholder="Description"></input>
-                <input class="input" type="text" name="filtreMonnaie" placeholder="Monnaie"></input>
-                <input class="input" type="text" name="filtreVille" placeholder="Ville"></input>
-                <input class="input" type="text" name="filtreAdresse" placeholder="Adresse"></input>
+                <input class="input" type="text" name="filtreNom" placeholder="Nom">
+                <input class="input" type="text" name="filtreDescription" placeholder="Description">
+                <input class="input" type="text" name="filtreMonnaie" placeholder="Monnaie">
+                <input class="input" type="text" name="filtreVille" placeholder="Ville">
+                <input class="input" type="text" name="filtreAdresse" placeholder="Adresse">
                 <button class="button" type="submit">Chercher</button>
             </form>
             <table id="table" class="table-all">
