Remboursement quand vente annulée

--- a/jardiquest/view/create_quest.html
+++ b/jardiquest/view/create_quest.html
@@ -21,7 +21,7 @@
                 <div class="inline big">
                     <p>Récompense de la quête : </p>
                     <input class="small" type="number" min=0 name="sum" required> 
-                    <p>de {{jardin.moneyName}}</p>
+                    <p> {{jardin.moneyName}}</p>
                 </div>
                 <div class="inline big">
                     <p>Date de début de la quête : </p>
