--- a/jardiquest/view/handle_garden.html
+++ b/jardiquest/view/handle_garden.html
@@ -77,7 +77,7 @@
                     <button class="third" type="submit" >Ajouter une quête</button>
                 </form>
                 <form action="/market/catalogue" method="get">
-                    <button class="third" type="submit" >Déposer des récoltes</button>
+                    <button class="third" type="submit" >Gérer les récoltes</button>
                 </form>
                 <form action=" /market/orders" method="get">
                     <button class="third" type="submit" >Finaliser les commandes</button>
