--- a/jardiquest/view/garden.html
+++ b/jardiquest/view/garden.html
@@ -135,11 +135,11 @@
                 <p id="idGarden" hidden></p>
             </div>
             <div class="modal-body">
-                <p>Voulez vous vraiment choisir ce jardin ?</p>
+                <p>Voulez vous vraiment rejoindre ce jardin ?</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
-                <button type="button" onclick="changeGarden()" class="btn btn-default">Choisir</button>
+                <button type="button" onclick="changeGarden()" class="btn btn-default">Rejoindre</button>
             </div>
         </div>
     </div>
