--- a/jardiquest/view/garden.html
+++ b/jardiquest/view/garden.html
@@ -109,7 +109,7 @@
                         <th>Adresse</th>
                         <th>Participants</th>
                         {% if user.role == 'Participant' %}
-                        <th>Choisir</th>
+                        <th>Rejoindre</th>
                         {% endif %}
                     </tr>
                 </thead>
