--- a/jardiquest/view/new_garden.html
+++ b/jardiquest/view/new_garden.html
@@ -29,7 +29,7 @@
 
             <div class="display_buttons_inline">
                 <input class="button" type="submit" value="Créer">
-                <a href="{{url_for('controller.garden')}}"><button>Annuler</button></a>
+                <a href="{{url_for('controller.garden')}}"><input type="button" value="Annuler"></a>
             </div>
         </form>
     </div>
